After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767349 - udisks2: Fix "format not a string literal" warnings
udisks2: Fix "format not a string literal" warnings
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: udisks2 volume monitor
unspecified
Other All
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2016-06-07 14:37 UTC by Bastien Nocera
Modified: 2016-06-09 10:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
udisks2: Fix "format not a string literal" warnings (2.24 KB, patch)
2016-06-07 14:37 UTC, Bastien Nocera
none Details | Review
udisks2: Fix "format not a string literal" warnings (2.24 KB, patch)
2016-06-08 10:05 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-06-07 14:37:33 UTC
.
Comment 1 Bastien Nocera 2016-06-07 14:37:38 UTC
Created attachment 329282 [details] [review]
udisks2: Fix "format not a string literal" warnings
Comment 2 Ondrej Holy 2016-06-08 07:13:19 UTC
Review of attachment 329282 [details] [review]:

Thanks for the patch, looks good except indentation! I just wonder why I don't see those warnings...

::: monitor/udisks2/gvfsudisks2utils.c
@@ +675,3 @@
+    message = g_strdup_printf (_("Unmounting %s\nPlease wait"), name);
+  else
+   message = g_strdup_printf (_("Writing data to %s\nDon't unplug until finished"), name);

wrong indentation
Comment 3 Debarshi Ray 2016-06-08 08:00:45 UTC
(In reply to Ondrej Holy from comment #2)
> Thanks for the patch, looks good except indentation! I just wonder why I
> don't see those warnings...

You need GCC 6.x (eg., Fedora 24) to get the warnings.
Comment 4 Ondrej Holy 2016-06-08 08:38:52 UTC
Hmm, I am on F24, have gcc-6.1.1-2.fc24.x86_64 and build with -Wall. I fixed some new warnings already thanks to the GCC 6.x, but I don't see this one...
Comment 5 Bastien Nocera 2016-06-08 10:05:16 UTC
Created attachment 329368 [details] [review]
udisks2: Fix "format not a string literal" warnings
Comment 6 Ondrej Holy 2016-06-08 10:29:47 UTC
Review of attachment 329368 [details] [review]:

Thanks!
Comment 7 Bastien Nocera 2016-06-09 10:01:14 UTC
Attachment 329368 [details] pushed as 8921a8f - udisks2: Fix "format not a string literal" warnings