udisks2: Fix "format not a string literal" warnings

https://bugzilla.gnome.org/show_bug.cgi?id=767349